# idk

./: .gitignore  Cargo.toml  Justfile  README.md
__tasks__/: list.md  todo
crates/dds-parser/: Cargo.toml
crates/dds-parser/src/: lib.rs
crates/dds-parser/src/field/: comment_field.rs  datatype_field.rs  decimalpositions_field.rs  formtype_field.rs  idk_field.rs  ignored_field.rs  keywords_field.rs  length_field.rs  mod.rs  name_field.rs  nametype_field.rs  reference_field.rs  result.rs  sequence_field.rs  usage_field.rs
crates/dds-parser/src/free/: core.rs  field_keywords_parser.rs  fileentry_keywords_parser.rs  keyfield_keywords_parser.rs  mod.rs  recordformat_keywords_parser.rs
crates/dds-parser/src/line/: comment_line.rs  continuation_line.rs  dds_line.rs  field_line.rs  idk_line.rs  key_line.rs  mod.rs  recordformat_line.rs
crates/dds-parser/src/meta/: diagnostic.rs  mixins.rs  mod.rs  position.rs
crates/dds-parser/src/pfdds/: ast.rs  cst.rs  entry.rs  field.rs  fileentry.rs  keyfield.rs  mod.rs  record_format.rs
crates/dds-parser/src/pfdds/snapshots/: dds_parser__pfdds__cst__tests__cst_snapshot.snap  dds_parser__pfdds__cst__tests__round_trip_snapshot.snap.new
crates/dds-parser/src/snapshots/: dds_parser__pfdds__tests__round_trip_snapshot.snap
crates/idk-graph/: Cargo.toml
crates/idk-graph/src/: cli.rs  cst.rs  dot_renderer.rs  main.rs  parser.rs  renderer.rs  texttree_renderer.rs
crates/idk-nvim/: Cargo.toml
crates/idk-nvim/src/: graph.rs  highlight.rs  lib.rs  mark.rs
crates/idk-nvim/src/snapshots/: idk_nvim__highlight__tests__highlights.snap  idk_nvim__highlight__tests__highlights_snapshot.snap
crates/idkpy/: Cargo.toml  idkpy.pyi  pyproject.toml
crates/idkpy/src/: lib.rs
crates/pfdds-lexer/: Cargo.toml
crates/pfdds-lexer/src/: lib.rs
crates/pfdds-parser/: Cargo.toml
crates/pfdds-parser/ast/: mod.rs
crates/pfdds-parser/src/: cst.rs  lib.rs
crates/rpgle-lexer/: Cargo.toml
crates/rpgle-lexer/src/: compiler_directive.rs  core.rs  cspec.rs  dspec.rs  fixed.rs  free.rs  fspec.rs  full_free.rs  hspec.rs  idk.rs  lib.rs  line_comment.rs
crates/rpgle-parser/: Cargo.toml
crates/rpgle-parser/src/: README.md  ast.rs  cst.rs  lib.rs
crates/rpgle-parser/src/ast/: ast.rs  core.rs  legacy.rs  mod.rs  nvim.rs  spec.rs  srcline.rs
crates/rpgle-parser/src/ast/snapshots/: rpgle_parser__ast__spec__tests__ast_snapshot.snap  rpgle_parser__ast__spec__tests__cspec_extf2_01.snap  rpgle_parser__ast__spec__tests__cspec_free_01.snap  rpgle_parser__ast__spec__tests__cspec_free_02.snap  rpgle_parser__ast__spec__tests__cspec_traditional_01.snap  rpgle_parser__ast__spec__tests__cspec_traditional_02.snap  rpgle_parser__ast__spec__tests__dspec_01.snap  rpgle_parser__ast__spec__tests__dspec_02.snap  rpgle_parser__ast__spec__tests__fspec_01.snap  rpgle_parser__ast__spec__tests__fspec_02.snap  rpgle_parser__ast__spec__tests__fspec_03.snap  rpgle_parser__ast__spec__tests__hspec_01.snap  rpgle_parser__ast__spec__tests__hspec_02.snap
crates/rpgle-parser/src/cst/: cst.rs  legacy.rs  mod.rs  nvim.rs  srcline.rs
crates/rpgle-parser/src/cst/snapshots/: rpgle_parser__cst__cst__tests__cst_snapshot.snap  rpgle_parser__cst__legacy__tests__cst_snapshot.snap
crates/rpgle-parser/src/field/: code_field.rs  comment_field.rs  compiler_directive_field.rs  control_level_field.rs  datastructure_type_field.rs  datatype_field.rs  decimals_field.rs  definition_type_field.rs  device_field.rs  endfile_field.rs  external_description_field.rs  factor1_field.rs  factor2_field.rs  file_addition_field.rs  file_designation_field.rs  file_format_field.rs  file_organization_field.rs  file_sequence_field.rs  filetype_field.rs  formtype_field.rs  idk_field.rs  indicators_field.rs  keylength_field.rs  keywords_field.rs  limits_processing_field.rs  mod.rs  name_field.rs  nothing_field.rs  operation_field.rs  position_field.rs  record_address_type_field.rs  record_length_field.rs  reserved_field.rs  result.rs  result_field.rs  result_length_field.rs  sequence_field.rs
crates/rpgle-parser/src/free/: compiler_directives_parser.rs  core.rs  dspec_keywords_parser.rs  free_parser.rs  fspec_keywords_parser.rs  hspec_keywords_parser.rs  lexer.rs  mod.rs  op_parser.rs
crates/rpgle-parser/src/line/: c_specline.rs  comment_specline.rs  compiler_directive_specline.rs  core.rs  d_specline.rs  f_specline.rs  h_specline.rs  idk_specline.rs  mod.rs  specline.rs
crates/rpgle-parser/src/meta/: array.rs  diagnostic.rs  hlgroup.rs  meta.rs  mod.rs  partition.rs  pmixin.rs  position.rs  span.rs
crates/rpgle-parser/src/snapshots/: rpgle_parser__ast__tests__ast_snapshot.snap  rpgle_parser__cst__tests__cst_snapshot.snap  rpgle_parser__cst__tests__round_trip_snapshot.snap  rpgle_parser__cst__tests__round_trip_snapshot.snap.new
crates/rpgle-parser/src/spec/: c_spec.rs  comment_spec.rs  compiler_directive_spec.rs  d_spec.rs  f_spec.rs  h_spec.rs  idk_spec.rs  mod.rs  spec.rs
idk.nvim/ftplugin/: pfdds.lua  rpgle.lua
idk.nvim/lua/: idk.lua  utils.lua
idk.nvim/lua/luarpgle/: formatter.lua  marker.lua
src/: main.rs
src/inline_subroutines/: mod.rs  workflow.rs
src/parser/: mod.rs  parser.rs  scanner.rs
utils/: idk-fmt  idk-get
