[workspace]
resolver = "2"

members = [
  # DISABLED
  # "crates/rpgle-lexer",        # lib - DEPRECATED - needed by idk-graph
  # "crates/idk-graph",          # source graph cli tool
  "crates/dds-parser",         # lib
  "crates/rpgle-parser",       # lib
  "crates/idk-nvim",           # nvim-oxi plugin
  ]

[workspace.package]
rust-version = "1.76"
edition = "2021"
license = "MIT"
authors = ["Zach Waite<zach@waiteperspectives.com>"]

[workspace.dependencies]
clap = { version = "4.5.3", features = ["derive"] }
nvim-oxi = { git="https://github.com/zachwaite/nvim-oxi.git", features=["neovim-0-9"]}
insta = { version = "1.38.0", features = ["yaml"] }
serde = { version = "1.0.206", features = ["derive"] }
