[workspace]
resolver = "2"

members = [
  "crates/dds-parser",         # lib
  "crates/rpgle-parser",       # lib
  "crates/idk-nvim",           # nvim-oxi plugin
]

[workspace.package]
rust-version = "1.76"
edition = "2021"
license = "MIT"
authors = ["Zach Waite<zach@waiteperspectives.com>"]

[workspace.dependencies]
clap = { version = "4.5.3", features = ["derive"] }
nvim-oxi = {version="0.5.1", features=["neovim-0-10"]}
insta = { version = "1.38.0", features = ["yaml"] }
serde = { version = "1.0.206", features = ["derive"] }
serde_json = "1.0"
nonempty = { version="0.10.0", features=["serialize"] }
