[package]
name = "idk-graph"
version = "0.0.0"
description = "TBD"

rust-version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "idk-graph"
path = "src/main.rs"

[dependencies]
clap.workspace = true
rpgle-lexer = { path="../rpgle-lexer" }
