[package]
name = "idk-nvim"
version = "0.0.0"
description = "TBD"

rust-version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
nvim-oxi.workspace = true
rpgle-lexer = { path="../rpgle-lexer" }
rpgle-parser = { path="../rpgle-parser" }
