[package]
name = "idk-nvim"
version = "0.0.0"
description = "TBD"

rust-version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
nvim-oxi.workspace = true
serde.workspace = true
serde_json.workspace = true
rpgle-parser = { path="../rpgle-parser" }
dds-parser = { path="../dds-parser" }

[dev-dependencies]
insta.workspace = true
