[package]
name = "rpgle-lexer"
version = "0.0.0"
description = "TBD"

rust-version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
thiserror.workspace = true
log.workspace = true
env_logger.workspace = true

[dev-dependencies]
indoc.workspace = true
