[package]
name = "rpgle-parser"
version = "0.0.0"
description = "RPGLE Parser"

rust-version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
thiserror.workspace = true
log.workspace = true
env_logger.workspace = true
serde.workspace = true

[dev-dependencies]
indoc.workspace = true
insta.workspace = true
